--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hora-varga-app",
+  "name": "hora-varga-chart",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,28 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-scroll-area": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "jspdf": "^3.0.0",
-    "lucide-react": "^0.477.0",
-    "next": "15.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "clsx": "^2.1.0",
+    "jspdf": "^2.5.1",
+    "next": "^15.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.17.23",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   }
 }
